# anikoto

./: .gitignore  README.md  anikoto.py  pyproject.toml  requirements.txt  setup.py
.github/workflows/: main.yml
anikoto/: anikoto.py
anikoto.egg-info/: PKG-INFO  SOURCES.txt  entry_points.txt  requires.txt  top_level.txt
