[project]
name = "anikoto" 
version = "5.0.0"
description = "Download anime from `anikoto.tv` / `anikoto.bz` / `anikoto.net` / `anikoto.cz`"
readme = "README.md"
requires-python = ">=3.8"
license = {text = "MIT"}
authors = [{name = "testingbetaversion", email = "moonmuaaz@gmail.com"}]
classifiers = [
    "Programming Language :: Python :: 3",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
]

dependencies = [
       'requests',
        'yt-dlp',
        'bs4',
        'curl_cffi',
        'm3u8',
        'cryptography',
        'langcodes'

]

[project.scripts]
anikoto = "anikoto.anikoto:main"

[project.urls]
"Homepage" = "https://github.com/testingbetaversion/anikoto"
"Source" = "https://github.com/testingbetaversion/anikoto"

[build-system]
requires = ["setuptools>=61", "wheel"]
build-backend = "setuptools.build_meta"
